// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Hero banners default renders correctly 1`] = `
<jest>
  <div
    class="bg-light text-dark text-center bcl-banner  hero"
  >
    <div
      class="container"
    >
      <div
        class="border-primary bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banners image shade renders correctly 1`] = `
<jest>
  <div
    class="bg-light text-center bcl-banner shade  hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banners image text-block renders correctly 1`] = `
<jest>
  <div
    class="bg-light text-dark text-center bcl-banner  overlay hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="border-primary bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banners primary renders correctly 1`] = `
<jest>
  <div
    class="bg-primary text-white text-center bcl-banner  hero"
  >
    <div
      class="container"
    >
      <div
        class="border-white bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-light"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banners -  default renders correctly 1`] = `
<jest>
  <div
    class="bg-light text-dark text-center bcl-banner "
  >
    <div
      class="container"
    >
      <div
        class="border-primary bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banners -  image shade renders correctly 1`] = `
<jest>
  <div
    class="bg-light text-center bcl-banner shade "
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banners -  image text-block renders correctly 1`] = `
<jest>
  <div
    class="bg-light text-dark text-center bcl-banner  overlay"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="border-primary bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banners -  primary renders correctly 1`] = `
<jest>
  <div
    class="bg-primary text-white text-center bcl-banner "
  >
    <div
      class="container"
    >
      <div
        class="border-white bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-light"
          href="/example.html"
        >
          Subscribe
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="boostrap-icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;
